--- a/ciinaboxes/example/jenkins/jobs.yml
+++ b/ciinaboxes/example/jenkins/jobs.yml
@@ -37,6 +37,7 @@ jobs:
         my_env_var: test
     github:
       protocol: ssh
+      repo_target_dir: app/
     shell:
       - file: example.sh
   -
@@ -94,6 +95,7 @@ jobs:
       url: https://aaronwalker@bitbucket.org/aaronwalker/jenkins-dsl-example.git
       credentials: bitbucket2
       branch: develop
+      repo_target_dir: app/
     shell:
       - file: example.sh
   -
@@ -111,6 +113,7 @@ jobs:
       repo: aaronwalker/jenkins-dsl-example
       branch: master
       credentials: customcreds
+      repo_target_dir: app/
     shell:
       - file: example.sh
   -
