adds wildcard support for artifacts to make copy the same artifact from mutiple jobs

--- a/ciinaboxes.example/example/jenkins/jobs.yml
+++ b/ciinaboxes.example/example/jenkins/jobs.yml
@@ -126,3 +126,14 @@ jobs:
       branch: "${TAG_OR_BRANCH}"
     shell:
       - file: example.sh
+  -
+    name: Example-Branch-With-Copy-Artifact-Wildcard
+    folder: example
+    parameters:
+      app_build_number: ""
+    artifacts:
+      -
+        job: example/Example-Branch-With-Artifact-*
+        file_pattern: "*.md"
+    shell:
+      - script: "echo ${APP_BUILD_NUMBER} - `date` >> README.md"
