allow jobs to be triggered with cron schedule

--- a/ciinaboxes.example/example/jenkins/jobs.yml
+++ b/ciinaboxes.example/example/jenkins/jobs.yml
@@ -162,3 +162,9 @@ jobs:
       artifactDaysToKeep: 1
     shell:
       - file: create-secrets.sh
+  -
+    name: Example-trigger-job-with-cron
+    folder: conctr
+    cronTrigger: "0 8 * * *"
+    shell:
+      - file: start-environment.sh
