--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ dependencies {
     compile 'org.codehaus.groovy:groovy:2.1.3'
     compile 'org.jenkins-ci.plugins:job-dsl-core:1.41'
     compile 'org.jenkins-ci.plugins:job-dsl:1.41'
-
+    compile group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
     testCompile('org.spockframework:spock-core:0.7-groovy-2.0') {
         exclude module: 'groovy-all'
     }
