--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ dependencies {
 
     compile group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
     compile group: 'javax.servlet', name: 'servlet-api', version: '2.5'
+    compile group: 'com.googlecode.java-diff-utils', name: 'diffutils', version: '1.2'
 
     testCompile('org.spockframework:spock-core:0.7-groovy-2.0') {
         exclude module: 'groovy-all'
@@ -54,6 +55,12 @@ task jenkins(dependsOn: 'classes', type: JavaExec) {
   main = 'com.base2.ciinabox.JobSeeder'
   classpath = sourceSets.main.runtimeClasspath
   systemProperties System.getProperties()
+}
+
+task jobsScriptCompare(dependsOn: 'classes', type: JavaExec) {
+    main = 'com.base2.ciinabox.ScriptCompare'
+    classpath = sourceSets.main.runtimeClasspath
+    systemProperties System.getProperties()
 }
 
 task debugXml(dependsOn: 'classes', type: JavaExec) {
