Copying artifacts - support for exclude pattern  Smaller bug fixes

--- a/ciinaboxes.example/example/jenkins/dsl-reference-jobs.yml
+++ b/ciinaboxes.example/example/jenkins/dsl-reference-jobs.yml
@@ -6,9 +6,6 @@ defaults:
     credentials: my-gh-creds                                # Not required for public repos, this should
                                                             # be ID of Jenkins credentials
                                                             # https://wiki.jenkins-ci.org/display/JENKINS/Credentials+Plugin
-  bitbucket:
-    credentials: my-bb-creds                               # Credentials to use for authorization with BitBucket
-
 jobs:
  - name: GenericGitBuild
    folder: dsl-doc
@@ -96,6 +93,7 @@ jobs:
  - name: BitbucketJob
    folder: dsl-doc
    bitbucket:
+     credentials: my-bb-creds                               # Credentials to use for authorization with BitBucket
      push: true                                             # Trigger build upon BB push
      cron: "* * * * *"                                      # Poll SCM for changes
      repo: nlstevenen/java-experimenting-with-java-8-features # BB repo to pull sources from
@@ -115,3 +113,52 @@ jobs:
      descriptionForFailed: Failed ${CUSTOM_VAR}             # Sets build description on failure
      regularExpression: Uploading[^\s]* ([^\s]*)            # Regex will be applied to each line in the build log
      regularExpressionForFailed: Failed [^\s]* ([^\s]*)     # Regex will be applied to each line in the build log on failure
+
+ - name: JobToCopyArtifactFrom1
+   folder: dsl-doc
+   shell:                                                  # Execute shell script as build step
+    - script: "echo 'test' > resultsjob1.txt"             # Add some text to txt file
+   archive:
+    - resultsjob1.txt                                     # Archive text file as result
+
+ - name: JobToCopyArtifactFrom2
+   folder: dsl-doc
+   shell:                                                  # Execute shell script as build step
+    - script: "echo 'test' > resultsjob2.txt"             # Add some text to txt file
+   archive:
+    - resultsjob2.txt                                     # Archive text file as result
+
+ - name: JobToCopyArtifactFrom3
+   folder: dsl-doc
+   shell:                                                  # Execute shell script as build step
+    - script: "echo 'test' > resultsjob3.txt"             # Add some text to txt file
+    - script: "echo 'test' > resultsjob3extended.txt"             # Add some text to txt file
+   archive:
+#    - resultsjob3.txt                                     # Archive text file as result
+    - resultsjob3extended.txt
+
+ - name: JobToCopyArtifactsToWildstar
+   folder: dsl-doc
+   artifacts:
+    - job: JobToCopyArtifactFrom*                         # You can use wildcard '*' when specifying job,
+                                                          # though you'll need to publish all jobs in single Jenkins Run when using wildcard
+                                                          # as wildcard matching is done on client side, and is not part of Jenkins plugin
+      file_pattern: "results*.txt"                        # files to include, filter is applied to stored artifacts from matched jobs
+      exclude_file_pattern: resultsjob1.txt               # files to exclude, filter is applied to stored artifacts from matched jobs
+      optional: true                                      # job won't fail if artifacts is nowhere to be found
+   shell:
+    - script: "ls -la results*"
+
+ - name: JobToCopyArtifactsToArray                        # This job will fail, as we have excluded results1.txt, and there are no artifacts
+                                                          # to copy from. This can be overriden by specifying optional: true
+   folder: dsl-doc
+   artifacts:
+    - job: JobToCopyArtifactFrom1                         # You can specify multiple jobs as an array in artifacts key
+      file_pattern: "results*.txt"                        # files to include, filter is applied to stored artifacts from job key
+      exclude_file_pattern: resultsjob1.txt               # files to exclude, filter is applied to stored artifacts from job key
+
+    - job: JobToCopyArtifactFrom2
+      file_pattern: "results*.txt"
+
+   shell:
+    - script: "ls -la results*"
