--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ sourceSets {
 repositories {
     mavenCentral()
     jcenter()
-    maven { url 'http://repo.jenkins-ci.org/releases/' }
+    maven { url 'https://repo.jenkins-ci.org/releases/' }
 }
 
 dependencies {
